[package]
name = "ixi-ci-server"
version = "0.0.1"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
edition = "2021"

[lib]

[workspace]
members = [
  "ci-lib-core",
  "ci-lib-native",
  "ci-runner",
  "ci-driver",
  "ci-web-server",
  "ci-ctl",
]
exclude = [
  # wasm target should not be built for x86, so exclude it
  "ci-wasm-frontend",
  # and do not try treating builds of rust projects using cargo as a workspace item
  "tmpdir",
]

[dependencies]
lazy_static = "*"
axum = { version = "*" }
axum-extra = { version = "*", features = ["async-read-body"] }
axum-server = { version = "*", features = ["tls-rustls"] }
handlebars = "*"
libc = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
rand = "*"
tokio = { version = "*", features = ["full"] }
console-subscriber = "*"
tokio-console = "*"
tokio-stream = "*"
hyper = "*"
futures-util = "*"
axum-macros = "*"
lettre = "*"
base64 = "*"
tracing = "*"
tracing-subscriber = "*"
http-body = "*"
rusqlite = "*"
http = "*"
hmac = "*"
hex = "*"
sha2 = "*"
reqwest = { version = "*", features = ["rustls-tls-native-roots"] }
clap = { version = "*", features = ["derive"] }
rlua = "*"
chrono = "*"
