[package]
name = "ci-web-server"
version = "0.0.1"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
edition = "2021"

[[bin]]
name = "ci_web_server"
path = "src/main.rs"

[dependencies]
ci-lib-core = { path = "../ci-lib-core" }
ci-lib-native = { path = "../ci-lib-native" }

tokio = { features = ["full"] }
tokio-stream = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
axum-server = { version = "*", features = ["tls-rustls"] }
axum-extra = { version = "*", features = ["async-read-body"] }
axum = "*"
hex = "*"
tracing-subscriber = "*"
hmac = "*"
http = "*"
http-body = "*"
chrono = "*"
lazy_static = "*"
sha2 = "*"
rusqlite = { version = "*" }
